--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -6,12 +6,11 @@
     display: flex;
     padding: 16px 40px;
     align-items: center;
-    background-color: var(--color-white);
     justify-content: space-between;
     border-bottom: 0.5px solid var(--color-primary-100);
 }
 
-.info {
+.header-info {
     display: flex;
     > * {
         flex: 1;
