--- a/src/components/atoms/avatar/avatar.scss
+++ b/src/components/atoms/avatar/avatar.scss
@@ -3,7 +3,7 @@
     // border: 0.5px solid var(--color-primary-100);
     overflow: hidden;
 }
-image {
+img {
     width: 100%;
     height: auto;
     object-fit: cover;
