--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,9 @@
 :root {
     --color-primary: #3563E9;
     --color-primary-100: #D6E4FD;
+    --color-primary-600: #264BC8;
     --color-secondary: #596780;
+    --color-secondary-300: #90A3BF;
     --color-secondary-500: #1A202C;
     --color-success: #000000;
     --color-white: #ffffff;
