--- a/src/components/organisms/footer/footer.scss
+++ b/src/components/organisms/footer/footer.scss
@@ -7,8 +7,8 @@
     width: 100%;
     font-size: 16px;
     padding: 30px 40px;
-    position: absolute;
-    bottom: 0;
+    // position: absolute;
+    // bottom: 0;
 }
 
 .footer-top {
