add likeCar function

--- a/src/components/molecules/carCard/carCard.scss
+++ b/src/components/molecules/carCard/carCard.scss
@@ -27,6 +27,15 @@
     .likeCar {
         padding: 0;
         border: 0;
+        .likeIcon {
+            color: var(--color-red);
+        }
+        .unlikeIcon {
+            color: var(--color-secondary-300);
+        }
+        svg:hover {
+            color: var(--color-red-bold);
+        }
     }
 }
 
