--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@
     --color-red: #FF4423;
     --color-red-bold: #DB2719;
     --color-background: #F6F7F9;
+    --color-blur-box: rgba(144, 163, 191, 0.2);
 }
 
 * {
