--- a/src/components/molecules/carCard/carCard.scss
+++ b/src/components/molecules/carCard/carCard.scss
@@ -1,6 +1,12 @@
 .carCard {
     padding: 20px;
     border-radius: 4px;
+    box-shadow: 0 0 5px var(--color-blur-box);
+    &:hover {
+        box-shadow: 0 0 12px var(--color-blur-box);
+        transform: translateY(-2px);
+        transition: box-shadow 0.3s ease;
+    }
 }
 
 .flexRow {
@@ -17,7 +23,7 @@
 
 .carInfo-top {
     align-items: start;
-    
+
     .carName {
         font-size: 20px;
     }
