--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,32 @@
 .home {
-    padding: 20px 40px;
+    padding: 0px 40px;
+    padding-bottom: 20px;
     background-color: var(--color-background);
+    display: flex;
+    flex-direction: column;
+
+    .title {
+        background-color: var(--color-background);
+        color: var(--color-secondary-300);
+        font-size: 16px;
+        font-weight: 600;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+
+    button.showMoreCar {
+        margin-top: 30px;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        border: none;
+        border-radius: 4px;
+        background-color: var(--color-primary);
+        color: var(--color-white);
+        padding: 12px 20px;
+
+        &:hover {
+            background-color: var(--color-primary-600);
+        }
+    }
 }
