--- a/src/components/organisms/carList/carList.scss
+++ b/src/components/organisms/carList/carList.scss
@@ -9,3 +9,31 @@
         aspect-ratio: 3 / 4;
     }
 }
+
+/* Mobile devices (landscape) */
+@media only screen and (max-width: 480px) {
+    .carList {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+/* Tablets */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+    .carList {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+/* Small laptops and desktops */
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+    .carList {
+        grid-template-columns: repeat(5, 1fr);
+    }
+}
+
+/* Large laptops and desktops */
+@media only screen and (min-width: 1025px) {
+    .carList {
+        grid-template-columns: repeat(6, 1fr);
+    }
+}
